<?xml version="1.0"?>
<package format="2">
  <name>ros_book_example</name>
  <version>0.0.0</version>
  <description>The ros_book_example package</description>

  <maintainer email="huynguyenvan@todo.todo">huynguyenvan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
